added signup with google

--- a/Bottom-tabbar-nevigation/my-app/app.json
+++ b/Bottom-tabbar-nevigation/my-app/app.json
@@ -2,16 +2,22 @@
   "expo": {
     "name": "my-app",
     "slug": "my-app",
+    "owner": "shariq1122",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.expo.myapp",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
+      "package": "com.expo.myapp",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -37,6 +43,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "812be680-e9b2-4c4d-bbfc-73a3e557bd1b"
+      }
     }
   }
 }
