--- a/Bottom-tabbar-nevigation/my-app/package.json
+++ b/Bottom-tabbar-nevigation/my-app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "axios": "^1.11.0",
     "expo": "^53.0.22",
     "expo-auth-session": "^6.2.1",
     "expo-blur": "~14.1.5",
@@ -40,6 +41,7 @@
     "react-native": "0.79.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
