--- a/mart/mart/tsconfig.json
+++ b/mart/mart/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/src/screens/main.js", "app/src/screens/medicines.js"  ]
 }
